# SimpleChatbotProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: DialogManagement.h  ErrorHandling.h  ExitRestart.h  IntentRecognition.h  KnowledgeBase.h  NLPModule.h  ResponseGeneration.h  UserInput.h
src/: DialogManagement.cpp  ErrorHandling.cpp  ExitRestart.cpp  IntentRecognition.cpp  KnowledgeBase.cpp  NLPModule.cpp  ResponseGeneration.cpp  UserInput.cpp  UserInterface.cpp  main.cpp
